tests/baselines/reference/parserInterfaceDeclaration8.errors.txt
tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration8.ts(1,11): error TS2427: Interface name cannot be 'string'.


==== tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration8.ts (1 errors) ====
    interface string {
              ~~~~~~
!!! error TS2427: Interface name cannot be 'string'.
    }